[gd_scene load_steps=9 format=3 uid="uid://cvkjhtfhjirxk"]

[ext_resource type="Script" path="res://projectiles/baseProjectile.gd" id="1_x0a2w"]
[ext_resource type="Texture2D" uid="uid://b4rl4nm1x6pv1" path="res://asserts/art/laser_small.png" id="2_h38uy"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_a2kju"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_pioxs"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="5_g6mgy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_fji3n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h38uy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1he2"]
size = Vector2(8, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfvfc"]
size = Vector2(7, 2)

[node name="Bullet" type="Node2D"]
script = ExtResource("1_x0a2w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_fji3n")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1, -2.68221e-07)
scale = Vector2(0.4, 0.2)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_a2kju")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_pioxs")
sprite = NodePath("../AnimatedSprite2D")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("5_g6mgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_q1he2")

[node name="WallHit" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallHit"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_gfvfc")

[connection signal="body_entered" from="WallHit" to="." method="_on_area_2d_body_entered"]
